kubernetes/applications/beancount/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fava
  namespace: beancount
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: beancount.toof.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fava
                port:
                  number: 5000
